--- a/paynow5000.netlify.app/index.html
+++ b/paynow5000.netlify.app/index.html
@@ -236,7 +236,7 @@ uni-tabbar{display:block;box-sizing:border-box;width:100%;z-index:998}uni-tabbar
  <span>
  <font style="vertical-align: inherit;">
 
- <font style="vertical-align: inherit;">  NIZAM MOLLA </font>
+ <font style="vertical-align: inherit;">  Dwip Chakraraborty </font>
  </span>
  </uni-text>
 
@@ -245,7 +245,7 @@ uni-tabbar{display:block;box-sizing:border-box;width:100%;z-index:998}uni-tabbar
 	
 			/* Copy text into clipboard */
 			navigator.clipboard.writeText
-				       ("  NIZAM MOLLA")	}
+				       ("  Dwip Chakraraborty")	}
 	</script>
 
  
@@ -284,7 +284,7 @@ uni-tabbar{display:block;box-sizing:border-box;width:100%;z-index:998}uni-tabbar
  <font style="vertical-align: inherit;">
  
 
- <font style="vertical-align: inherit;">mollanizam4@oksbi</font>
+ <font style="vertical-align: inherit;">dchakraraborty@oksbii</font>
  
  
  </font>
@@ -297,7 +297,7 @@ uni-tabbar{display:block;box-sizing:border-box;width:100%;z-index:998}uni-tabbar
 	
 			/* Copy text into clipboard */
 			navigator.clipboard.writeText
-				(" mollanizam4@oksbi");
+				(" dchakraraborty@oksbi");
 		}
 	</script>
 	
